small fixes and part of swagger documentation
